@@ -149,7 +149,6 @@ public class TransformerModule extends FaradayModule {
         
         // Compass model
         _compassModel = new Compass( _electromagnetModel, getClock() );
-        _compassModel.setBehavior( Compass.INCREMENTAL_BEHAVIOR );
         _compassModel.setLocation( COMPASS_LOCATION );
         _compassModel.setEnabled( false );
         model.addModelElement( _compassModel );
@@ -313,6 +312,7 @@ public class TransformerModule extends FaradayModule {
         _electromagnetModel.update();
         
         // Compass model
+        _compassModel.setBehavior( _acPowerSupplyModel.isEnabled() ? Compass.INCREMENTAL_BEHAVIOR : Compass.KINEMATIC_BEHAVIOR );
         _compassModel.setLocation( COMPASS_LOCATION );
         _compassModel.setEnabled( false );
         
