@@ -1,3 +1,4 @@
+7/21/10 #2446, adjust compass behavior to match electromagnet current source (DC=kinematic, AC=incremental)
 7/21/10 cleanup FaradayControlPanel, remove call to deprecated constructor, refine public interface
 7/21/10 #2236, calibrate kinematic compass behavior
 # 2.03.06 (42502) Jul 20, 2010
